static/styles/style.css
*,
*::before,
*::after {
    box-sizing: border-box;
}

:root {
    --background-color: #181818;
    --primary-text-color: #FFF;
    --secondary-text-color: #C7C7C7;
    --post-background: #101010;
    --wrap-width: 650px;
}

html {
    box-sizing: border-box;
	-webkit-font-smoothing: antialiased;
	-moz-osx-font-smoothing: grayscale;
	font-size: 100%;
}

body {
    background-color: var(--background-color);
    color: var(--primary-text-color);
    font-family: 'Inter', sans-serif;
    display: flex;
    padding: 0;
    margin: 0;
}

.wrap {
    max-width: var(--wrap-width);
    width: 100%;
}

h1,h2 {
    font-weight: normal;
    text-align: center;
    margin: 0;
}

h1 {
    font-weight: 500;
    margin-bottom: 16px;
    font-size: 20px;
}

h2 {
    color: var(--secondary-text-color);
    font-size: 14px;
}

a {
    text-decoration: none;
}

blockquote {
  margin: 3rem 0;
  padding: 1.5rem 0;
  font-family: "Instrument Serif", Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
  font-size: 1.5rem;
  line-height: 1.5;
  text-align: center;

  --border: 1px solid rgba(255,255,255,.2);
  border-top: var(--border);
  border-bottom: var(--border);
}

blockquote > p {
  margin: 0 !important;
}

blockquote > p .small {
  font-size: 1rem;
}

hr {
  border: none;
  border-top: 1px solid rgba(255,255,255,.1);
  margin: 3rem auto;
  max-width: 2rem;
}

/* header */

.header {
    padding: 0;
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    width: 100%;
    height: calc(100vh - 15vh);
}

.header a {
    display: block;
    max-width: max-content;
    width: 100%;
    color: inherit;

    & i {
        display: inline-block;
        margin-right: 12px;
    }
}

.header svg {
    display: block;
}

.header h2 {
    text-align: left;
    max-width: 60%;
    width: 100%;
    line-height: 1.5;
}

/* home */

.aside,
.content {
    padding-top: 10vh;
}

.content {
    width: 100%;
    max-width: 65%;
}

/* post */
.post {
    margin-bottom: 5vh;
    padding: 0 16px;
}

.post__inner {
}

.post__header, 
.post__footer {
    max-width: calc(var(--wrap-width) - 60px);
    width: 100%;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    margin: 0 auto;
    padding: 22px;
    background: url(../images/wild-oliva.png) repeat var(--post-background);
}

.post__header {
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    box-shadow: 0px 1px 0px 0px rgba(103, 103, 103, 0.25) inset;
    position: relative;
}

.post__footer {
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
    box-shadow: 0px 10px 10px 0px rgba(18, 18, 18, 0.38);
}

.post__header a {
    width: 100%;
    display: flex;
    justify-content: space-between;
    color: inherit;
}

.post__header h3 {
    margin: 0;
    color: var(--primary-text-color);
    font-weight: 500;
}

.post__header time {
    color: var(--secondary-text-color);
    font-size: 12px;
    background: linear-gradient(180deg, #242424 0%, #1B1B1B 100%);
    color: #929292;
    box-shadow: 0px 1px 0px 0px rgba(103, 103, 103, 0.25) inset, 0px 4px 10px 0px rgba(0, 0, 0, 0.10);
    position: absolute;
    padding: 8px;
    right: 20px;
    top: -5px;
    border-radius: 4px;
}

.post__meta {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
}

.post__meta a svg path {
    transition: .4s;
    fill: #838383;
}

.post__meta a:hover svg path {
    fill: white;
    transition: .4s;
}

.post__content--tags {
    padding-left: 0;
    list-style-type: none;
    display: flex;
    margin: 8px 0;
}

.post__content--tags li {
    margin-right: 8px;
    background-color: var(--background-color);
    box-shadow: 0px 1px 3px 0px #13151A inset;
    border-bottom: 1px solid #353535;
    padding: 8px;
    border-radius: 10px;
    font-size: 14px;
    line-height: 1.5;
}

.post__media img,
.post__media video {
    border-radius: 10px;
    max-width: 100%;
    height: auto;
    margin-bottom: -5px;
    background-color: var(--post-background);
    box-shadow: 0px 10px 10px 0px rgba(18, 18, 18, 0.38);
    border: 1px solid #1e1e1e;
}

.post__content {
    max-width: calc(var(--wrap-width) - 60px);
    width: 100%;
    margin: 0 auto;
    background: url(../images/wild-oliva.png) repeat var(--post-background) 200% 200%;

    & a {
        color: var(--primary-text-color);
        text-decoration: underline;
    }
}

.post__content p {
    padding: 22px;
    margin: 0;
    font-size: 15px;
}

.highlight {
    background-color: #2B2D38;
}

.highlight pre {
    padding: 16px;
}

/* footer */
.footer {
    width: 100%;
    padding: 32px 0;
}

@media (max-width: 610px) {
    .footer {
        padding: 32px 0 64px 0;
    }
}

.footer p {
    color: var(--secondary-text-color);
    width: 100%;
    text-align: center;
    font-size: 12px;
}

.footer p:first-child {
    font-size: 16px;
}

.news-box {
    padding: 32px 0;
}

/* Component: Button */
.button {
  padding: .5rem 1rem;

  color: white;
  border: 1px solid #333;
  border-radius: .5rem;
  box-shadow: inset 0px 1px 1px rgba(255,255,255,.4),
              inset 0px 2px 2px rgba(255,255,255,.1),
              inset 0px -1px 0px rgba(0,0,0,.1),
              0px 2px 4px rgba(0,0,0,.2);
  background-color: #111;

  transition: all 260ms ease;
}

.button:hover {
  background-color: #1c1c1c;
}

/* Page: 404 */
.page-404 {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  height: calc(100vmin - 280px);
}

/* Page */
.article__content p {
  margin-bottom: 1.5rem;
  margin-top: 0;
}

.article__content a {
    color: white;
    text-decoration: underline;
    font-weight: 600;
}

#custom-substack-embed {
    display: flex;
    justify-content: center;
    flex-direction: column;
    align-items: center;
    margin-bottom: 24px;
}

#disqus_thread {
    margin-top: 16px;
}

/* aside */
.aside {
    width: 100%;
    height: 100vh;
    display: flex;
    justify-content: end;

    & .aside__inner {
        position: fixed;
        height: 100%;
        padding: 0 32px;
        display: flex;
        justify-content: end;
    }
}

.footline__links {
    list-style-type: none;
    padding-left: 0;

    & li {
        width: 100%;
        display: flex;
        align-items: center;
        margin-bottom: 26px;
        font-size: 15px;
    }

    & a {
        display: flex;
        align-items: center;
        color: var(--secondary-text-color);
        transition: .4s;
    }

    & a:hover {
        transition: .4s;
        color: var(--primary-text-color);
    }

    & i {
        display: flex!important;
        background-color: #323232;
        border: 1px solid #181818;
        border-radius: 4px;
        width: 24px;
        height: 24px;
        align-items: center;
        justify-content: center;
    }
}

.nav-button {
    & a {
        background: url(../images/wild-oliva.png) repeat var(--post-background);
        box-shadow: 0px 1px 0px 0px rgba(103, 103, 103, 0.25) inset, 0px 10px 10px 0px rgba(18, 18, 18, 0.38);
        padding: 16px;
        border-radius: 10px;
        display: flex;
        transition: .4s;
        color: var(--primary-text-color);
    }

    & a:hover {
        transform: translateY(-5px);
        transition: .4s;
    }

    & i {
        background: linear-gradient(180deg, #202020 0%, #1C1C1C 100%);
        box-shadow: 0px 1px 0px 0px #343434 inset;
        width: 38px;
        height: 38px;
        display: flex;
        align-items: center;
        justify-content: center;
        border-radius: 10px;
    }

    & .label {
        display: flex;
        flex-direction: column;

        & span {
            font-weight: 500;
        }
    }

    & small {
        color: var(--secondary-text-color);
        margin-top: 4px;
    }
}

.closeMenu {
    -webkit-appearance: none;
    background: url(../images/wild-oliva.png) repeat var(--post-background);
    color: var(--primary-text-color);
    border: none;
    font-size: 24px;
    display: flex;
    justify-content: center;
    align-items: center;
    border-radius: 100%;
    width: 30px;
    height: 30px;
    z-index: 10;
    position: absolute;
    top: 10px;
    right: 10px;
}

.openMenu {
    -webkit-appearance: none;
    background: url(../images/wild-oliva.png) repeat var(--post-background);
    color: var(--primary-text-color);
    border: none;
    font-size: 24px;
    display: flex;
    border-radius: 5px;
    position: absolute;
    top: 20px;
    right: 20px;
    padding: 5px 15px;
}

@media (max-width: 768px) {
    .content {
        max-width: 100%;
    }

    .wrap {
        margin: 0 auto;
    }

    .aside {
        transform: translateX(-100%);
        transition: .4s;
        position: fixed;
        left: 0;
        top: 0;
        max-width: 50%;
        z-index: 5;
        background-color: var(--background-color);
    }

    .mobile-menu {
        display: block;
    }
    .header h2 {
        max-width: 100%;
    }
}

.menuOpened {
    transform: translateX(0);
    transition: .4s;
}

@media (min-width: 769px) {
    .aside {
        position: relative;
        max-width: 35%;
    }

    .openMenu, .closeMenu {
        display: none;
    }
}

